--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title></title>
+        <title>RcPapeScrissGame</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
@@ -10,11 +10,32 @@
     <body>
         <!-- <i class="fa fa-hand-peace-o" aria-hidden="true"></i> -->
         
-        <nav>
-            Rock Paper Scissors Game
-        </nav>
+        <header>
+            <h1>Rock Paper Scissors</h1>
+        </header>
 
-        
+        <div class="scbrd">
+            <div class="bd" id="usleb">user</div>
+            <div class="bd" id="coleb">computer</div>
+            <span id="user">0</span>
+            <span id="comp">0</span>
+        </div>
+
+        <div class="result">
+            Paper Covers rock . You win!
+        </div>
+
+        <div class="stcho">
+            <div class="choice">
+                <img>
+                <img>
+                <img>
+            </div>
+        </div>
+
+        <div class="beg" id="act">
+            Let's begin!
+        </div>
 
     </body>
 </html>
