--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script src="https://use.fontawesome.com/b80ad5dc68.js"></script>
     </head>
     <body>
-        <!-- <i class="fa fa-hand-peace-o" aria-hidden="true"></i> -->
+        
         
         <header>
             <h1>Rock Paper Scissors</h1>
@@ -26,10 +26,14 @@
         </div>
 
         <div class="stcho">
-            <div class="choice">
-                <img>
-                <img>
-                <img>
+            <div class="choice" id="r">
+                <i class="fa fa-hand-rock-o" aria-hidden="true"></i>
+            </div>
+            <div class="choice" id="p">
+                <i class="fa fa-hand-paper-o" aria-hidden="true"></i>
+            </div>
+            <div class="choice" id="s">
+                <i class="fa fa-hand-peace-o" aria-hidden="true"></i>
             </div>
         </div>
 
