--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>RcPapeScrissGame</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
         <script src="https://use.fontawesome.com/b80ad5dc68.js"></script>
     </head>
     <body>
