--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
         <div class="scbrd">
             <div class="bd" id="usleb">user</div>
-            <div class="bd" id="coleb">computer</div>
+            <div class="bd" id="coleb">comp</div>
             <span id="user">0</span>
-            <span id="comp">0</span>
+            <span id="comp">: 0</span>
         </div>
 
         <div class="result">
