--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
         </div>
 
         <div class="stcho">
-            <div class="choice" id="r">
-                <i class="fa fa-hand-rock-o" aria-hidden="true"></i>
-            </div>
-            <div class="choice" id="p">
+            <span class="choice" id="r">
+                <i class="fa fa-hand-rock-o fa-3x" aria-hidden="true"></i>
+            </span>
+            <span class="choice" id="p">
                 <i class="fa fa-hand-paper-o" aria-hidden="true"></i>
-            </div>
-            <div class="choice" id="s">
+            </span>
+            <span class="choice" id="s">
                 <i class="fa fa-hand-peace-o" aria-hidden="true"></i>
-            </div>
+            </span>
         </div>
 
         <div class="beg" id="act">
