--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 
         <div class="stcho">
             <span class="choice" id="r">
-                <i class="fa fa-hand-rock-o fa-3x" aria-hidden="true"></i>
+                <i class="fa fa-hand-rock-o fa-4x " aria-hidden="true"></i>
             </span>
             <span class="choice" id="p">
-                <i class="fa fa-hand-paper-o" aria-hidden="true"></i>
+                <i class="fa fa-hand-paper-o fa-4x" aria-hidden="true"></i>
             </span>
             <span class="choice" id="s">
-                <i class="fa fa-hand-peace-o" aria-hidden="true"></i>
+                <i class="fa fa-hand-peace-o fa-4x" aria-hidden="true"></i>
             </span>
         </div>
 
