--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <div class="bd" id="usleb">user</div>
             <div class="bd" id="coleb">comp</div>
             <span id="user">0</span>
-            <span id="comp">: 0</span>
+            <span>:</span>
+            <span id="comp">0</span>
         </div>
 
         <div class="result">
